syntax = "proto3";

package com.github.szgabsz91.morpher.transformationengines.fst.protocolbuffers;

option java_multiple_files = true;
option java_package = "com.github.szgabsz91.morpher.transformationengines.fst.protocolbuffers";
option java_outer_classname = "FSTProtocolBuffers";

import "com/github/szgabsz91/morpher/core/protocolbuffers/morpher_core.proto";

message FSTTransformationEngineMessage {
    bool unidirectional = 1;
    string affixType = 2;
    repeated com.github.szgabsz91.morpher.core.protocolbuffers.WordPairMessage wordPairs = 3;
}

message FSTTransformationEngineConfigurationMessage {

}
